option('DEBUG',               type : 'boolean', value: false, description: 'Include additional debug-code in core')
option('WARNINGS',            type : 'boolean', value: false, description: 'Show all warnings during compile')
option('POSTGRESQL',          type : 'boolean', value: false, description: 'Use PostgreSQL')
option('PCH',                 type : 'boolean', value: true,  description: 'Use precompiled headers')
option('BUILD_GAME_SERVER',   type : 'boolean', value: true,  description: 'Build game server')
option('BUILD_LOGIN_SERVER',  type : 'boolean', value: true,  description: 'Build login server')
option('BUILD_EXTRACTORS',    type : 'boolean', value: false, description: 'Build map/dbc/vmap/mmap extractors')
option('BUILD_SCRIPTDEV',     type : 'boolean', value: true,  description: 'Build ScriptDev. (Off speeds up build)')
option('BUILD_PLAYERBOT',     type : 'boolean', value: false, description: 'Build Playerbot mod')
option('BUILD_AHBOT',         type : 'boolean', value: false, description: 'Build Acution House Bot mod')
option('BUILD_METRICS',       type : 'boolean', value: false, description: 'Build Metrics, generate data for Grafana')
option('BUILD_RECASTDEMOMOD', type : 'boolean', value: false, description: 'Build map/vmap/mmap viewer')
option('BUILD_GIT_ID',        type : 'boolean', value: false, description: 'Build git_id')
option('BUILD_DOCS',          type : 'boolean', value: false, description: 'Build documentation with doxygen')
option('USE_ANTICHEAT',       type : 'boolean', value: true,  description: 'Use anticheat system')
