g3d_sources = [
    'AABox.cpp',
    'Any.cpp',
    'BinaryFormat.cpp',
    'BinaryInput.cpp',
    'BinaryOutput.cpp',
    'Box.cpp',
    'Capsule.cpp',
    'CollisionDetection.cpp',
    'CoordinateFrame.cpp',
    'Crypto.cpp',
    'Cylinder.cpp',
    'FileSystem.cpp',
    'Line.cpp',
    'LineSegment.cpp',
    'Log.cpp',
    'Matrix3.cpp',
    'Matrix4.cpp',
    'MemoryManager.cpp',
    'PhysicsFrame.cpp',
    'Plane.cpp',
    'Quat.cpp',
    'Random.cpp',
    'Ray.cpp',
    'ReferenceCount.cpp',
    'RegistryUtil.cpp',
    'Sphere.cpp',
    'System.cpp',
    'TextInput.cpp',
    'TextOutput.cpp',
    'Triangle.cpp',
    'UprightFrame.cpp',
    'Vector2.cpp',
    'Vector3.cpp',
    'Vector4.cpp',
    'debugAssert.cpp',
    'fileutils.cpp',
    'format.cpp',
    'g3dfnmatch.cpp',
    'g3dmath.cpp',
    'prompt.cpp',
    'stringutils.cpp',
    'uint128.cpp'
]

g3d_inc = include_directories('G3D', '../include')

g3dlib = static_library('g3dlite',
                        g3d_sources,
                        include_directories: g3d_inc,
                        dependencies: zlib_dep,
                        install : false)